opam-version: "2.0"
name: "mirage-unikernel-httpaf_unikernel-unix"
depends: [
  "crunch" {build & >= "3.0.0" & < "4.0.0"}
  "dune" {build}
  "functoria-runtime"
  "lwt"
  "mirage" {build & >= "3.5.0" & < "3.6.0"}
  "mirage-bootvar-unix" {>= "0.1.0" & < "0.2.0"}
  "mirage-clock-unix" {>= "2.0.0" & < "3.0.0"}
  "mirage-conduit" {>= "3.0.1" & < "4.0.0"}
  "mirage-console-unix" {>= "2.2.0" & < "3.0.0"}
  "mirage-kv-mem"
  "mirage-logs" {>= "0.3.0" & < "0.4.0"}
  "mirage-runtime" {>= "3.5.0" & < "3.6.0"}
  "mirage-types" {>= "3.5.0" & < "3.6.0"}
  "mirage-types-lwt" {>= "3.5.0" & < "3.6.0"}
  "mirage-unix" {>= "3.1.0" & < "4.0.0"}
  "nocrypto" {>= "0.5.4" & < "0.6.0"}
  "ocaml" {build & >= "4.04.2"}
  "ocamlfind" {build}
  "tcpip" {>= "3.7.1" & < "3.8.0"}
]
maintainer: "dummy"
authors: "dummy"
homepage: "dummy"
bug-reports: "dummy"
build: [ "mirage" "build" ]
synopsis: "This is a dummy"
version: "~dev"
